package org.pancakelab.model.order;

public enum OrderStatus {
    CREATED,
    CANCELLED,
    COMPLETED
}
